# gnome-wsname-applet

./: .gitignore  ChangeLog  GNOME_wsname.server  Makefile  Makefile.am  Makefile.am~  Makefile.in  Makefile~  README.markdown  README.markdown~  aclocal.m4  config.status  configure  configure.in  ws-name.server~  ws-nick.py~  wsname.py  wsname.py~
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
