AC_INIT(wsname.py)

AM_INIT_AUTOMAKE(wsname, 0.0.1)

AM_MAINTAINER_MODE

AM_PATH_PYTHON

PKG_CHECK_MODULES(PYGTK, pygtk-2.0 gnome-python-2.0)
AC_SUBST(PYGTK_CFLAGS)
AC_SUBST(PYGTK_LIBS)

GETTEXT_PACKAGE=wsname
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [The gettext package])

AM_PO_SUBDIRS

AC_OUTPUT([
Makefile
])
